Some more fixes/updates

--- a/download/index.html
+++ b/download/index.html
@@ -46,7 +46,7 @@
         
     <h3>Download the code from GitHub or Bitbucket</h3>
     <p>
-      <a href="https://github.com/tizonia/tizonia-openmax-il">Tizonia</a> is still under development and has not been officially released yet. However the project is mirrored on <a href="https://github.com/tizonia/tizonia-openmax-il">GitHub</a> and <a href="https://bitbucket.org/tizonia/tizonia-openmax-il">Bitbucket</a>. Please follow the instructions there to build the project from source.
+      <a href="https://github.com/tizonia/tizonia-openmax-il">Tizonia</a> is still under development and has not officially been released yet. However the project is mirrored on <a href="https://github.com/tizonia/tizonia-openmax-il">GitHub</a> and <a href="https://bitbucket.org/tizonia/tizonia-openmax-il">Bitbucket</a>. Please follow the instructions there to build the project from source.
     </p>
 
 
