Added Google Play Music news

--- a/docs.html
+++ b/docs.html
@@ -5,7 +5,7 @@
   <head>
     <title>Tizonia &gt; Documentation</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="keywords" content="OpenMAX IL,Khronos,multimedia,codecs,hardware acceleration,vp8,webm,mp3,decoder,open source" />
+    <meta name="keywords" content="OpenMAX IL,Khronos,multimedia,codecs,hardware acceleration,vp8,webm,mp3,decoder,open source,Spotify,Google Play Music" />
     <meta name="description" content="Tizonia Website." />
     <link rel="stylesheet" href="css/stylesheet.css" type="text/css" media="screen" charset="utf-8" />
     <link rel="stylesheet" href="css/shCore.css" type="text/css" />
@@ -21,7 +21,7 @@
           <a id="forkme_banner" href="https://github.com/tizonia">View on GitHub</a>
 
           <h1 id="project_title">Tizonia</h1>
-          <h2 id="project_tagline">Music player, streaming client/server, and Spotify client for Linux.</h2>
+          <h2 id="project_tagline">Music player, streaming client/server, Spotify and Google Play Music client for Linux.</h2>
 
         </header>
       </div>
