--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <title>Tizonia</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="keywords" content="OpenMAX IL,Khronos,multimedia,codecs,hardware acceleration,vp8,webm,mp3,decoder,open source" />
+    <meta name="keywords" content="OpenMAX IL,Khronos,multimedia,codecs,hardware acceleration,vp8,webm,mp3,decoder,open source,Spotify,Google Play Music" />
     <meta name="description" content="Tizonia Website." />
     <link rel="stylesheet" href="css/stylesheet.css" type="text/css" media="screen" charset="utf-8" />
     <link rel="stylesheet" href="css/shCore.css" type="text/css" />
@@ -21,7 +21,7 @@
           <a id="forkme_banner" href="https://github.com/tizonia">View on GitHub</a>
 
           <h1 id="project_title">Tizonia</h1>
-          <h2 id="project_tagline">Music player, streaming client/server, and Spotify client for Linux.</h2>
+          <h2 id="project_tagline">Music player, streaming client/server, Spotify and Google Play Music client for Linux.</h2>
 
         </header>
       </div>
@@ -47,7 +47,8 @@
 
     <h3>News</h3>
         <ul>
-          <li>2014-01-18: Added Spotify support.</li>
+          <li>2015-05-25: Added Google Play Music support.</li>
+          <li>2015-01-18: Added Spotify support.</li>
           <li>2013-04-10: Continuous integration available:
             <ul> <li><a href=\"https://travis-ci.org/tizonia/tizonia-openmax-il\">https://travis-ci.org/tizonia/tizonia-openmax-il</a>.</li></ul>
           </li>
@@ -57,7 +58,7 @@
 <h3>The Tizonia Project</h3>
 
 <ul>
-  <li>A command-line Spotify client, music player and audio streaming client/server for Linux.</li>
+  <li>A command-line Spotify and Google Play Music client, music player and audio streaming client/server for Linux.</li>
   <li>Also, a full multimedia framework based on OpenMAX IL 1.2 provisional specification.</li>
 </ul>
 
@@ -65,8 +66,9 @@
 
 <h4><code>tizonia</code>: a command-line music player and streaming client/server</h4>
 <ul>
+  <li>Spotify streaming service client (Spotify Premium account required).</li>
+  <li>Google Play Music streaming service client.</li>
   <li>Playback from local media: mp3, mp2, mpa, m2a, aac, ogg/vorbis, opus, wav, aiff, and flac).</li>
-  <li>Spotify streaming service client.</li>
   <li>Icecast/SHOUTcast streaming client (mp3, aac, and opus) and server (mp3).</li>
   <li>Daemon and command line modes (no GUI). MPRIS D-BUS v2 remote control interface.</li>
   <li>Based on Tizonia's own OpenMAX IL 1.2-based multimedia framework (i.e. no ffmpeg, libav, libvlc, or gstreamer required).</li>
